--- a/config/log4rs.yml
+++ b/config/log4rs.yml
@@ -5,13 +5,25 @@ appenders:
   # An appender named "stdout" that writes to stdout
   stdout:
     kind: console
+    encoder:
+      pattern: "{d(%Y-%m-%d %H:%M:%S%.3f %Z)(utc)} (({T})) [{l}] {t}:{m}{n}"
 
   # An appender named "application" that writes to a file with a custom pattern encoder
   application:
-    kind: file
+    kind: rolling_file
     path: "output/log/application.log"
+    policy: 
+      kind: compound
+      trigger:
+        kind: size
+        limit: 50mb
+      roller:
+        kind: fixed_window
+        base: 1
+        count: 20
+        pattern: "output/log/application.{}.log.gz"
     encoder:
-      pattern: "{d} - {m}{n}"
+      pattern: "{d(%Y-%m-%d %H:%M:%S%.3f %Z)(utc)} (({T})) [{l}] {t}:{m}{n}"
 
 # Set the default logging level to "info" and attach both appenders to the root
 root:
@@ -20,7 +32,7 @@ root:
     - stdout
     - application
 
-# loggers:
+# loggers: (Kept for reference)
   # Route log events sent to the "app::requests" logger to the "requests" appender,
   # and *not* the normal appenders installed at the root
   # app::requests:
