--- a/config/log4rs.yml
+++ b/config/log4rs.yml
@@ -32,7 +32,7 @@ root:
     - stdout
     - application
 
-# loggers: (Kept for reference)
+# loggers: ()
   # Route log events sent to the "app::requests" logger to the "requests" appender,
   # and *not* the normal appenders installed at the root
   # app::requests:
