--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ log4rs = "0.8.0"
 rayon = "1.0.0"
 statsd = "0.10.0"
 cadence = "0.13.2"
+lazy_static = "1.0"
 
 [target.'cfg(windows)'.dependencies]
 winapi = "0.3.4"
