Getting CPU busy time on Windows

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ cadence = "0.13.2"
 lazy_static = "1.0"
 
 [target.'cfg(windows)'.dependencies]
-winapi = "0.3.4"
+winapi = { version = "0.3.4", features = ["pdh"] }
 kernel32-sys = { version = "0.2.2", features = [] }
 
 [target.'cfg(target_os="linux")'.dependencies]
