--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ rayon = "1.0.0"
 statsd = "0.10.0"
 cadence = "0.13.2"
 lazy_static = "1.0"
+serde = "1.0"
+serde_derive = "1.0"
+serde_yaml = "0.7"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3.4", features = ["pdh"] }
