--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ lazy_static = "1.0"
 serde = "1.0"
 serde_derive = "1.0"
 serde_yaml = "0.7"
+serde-humantime = "0.1.1"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3.4", features = ["pdh"] }
