--- a/config/log4rs.yml
+++ b/config/log4rs.yml
@@ -6,12 +6,12 @@ appenders:
   stdout:
     kind: console
     encoder:
-      pattern: "{d(%Y-%m-%d %H:%M:%S%.3f %Z)(utc)} (({T})) [{l}] {t}:{m}{n}"
+      pattern: "{d(%Y-%m-%d %H:%M:%S%.3f %Z)(utc)} (({T})) [{l}] {t}: {m}{n}"
 
   # An appender named "application" that writes to a file with a custom pattern encoder
   application:
     kind: rolling_file
-    path: "${output_directory}/log/application.log"
+    path: '${output_directory}/log/application.log'
     policy: 
       kind: compound
       trigger:
@@ -21,7 +21,7 @@ appenders:
         kind: fixed_window
         base: 1
         count: 20
-        pattern: "${output_directory}/log/application.{}.log.gz"
+        pattern: '${output_directory}/log/application.{}.log.gz'
     encoder:
       pattern: "{d(%Y-%m-%d %H:%M:%S%.3f %Z)(utc)} (({T})) [{l}] {t}: {m}{n}"
 
