Packaging functioning as expected

--- a/debian/control
+++ b/debian/control
@@ -1,12 +1,11 @@
-Source: lines
+Source: lines-agent
 Section: utils
 Priority: optional
 Maintainer: Mitchell Spradlin <mitch@spradlin.net>
 Build-Depends: debhelper (>= 8), dh-systemd
 Standards-Version: 0.1.0
-Version: 0.1.0
 
-Package: lines
+Package: lines-agent
 Architecture: all
 Description: lightweight monitoring agent
  lines is a configurable monitoring agent that sends metrics to a statsd instance.
